--- a/form.css
+++ b/form.css
@@ -53,7 +53,7 @@
           resize: none;
         }
         .formbold-form-input::placeholder {
-          color: #536387;
+          color: rgba(0, 0, 0, 0.4);
         }
         .formbold-form-input:focus {
           border-color: #6A64F1;
